--- a/_posts/2020-02-14-VxWorks1.md
+++ b/_posts/2020-02-14-VxWorks1.md
@@ -2,7 +2,7 @@
 title: "Wind River University Program 라이선스 발급받기"
 excerpt: "Wind River Product's University Program 라이선스 발급받아, VxWorks 6.9에 라이선스 등록한다."
 categories:
-  - RTOS
+  - VxWorks
 last_modified_at: 2020-02-16
 layout: post
 ---
@@ -18,7 +18,8 @@ layout: post
 
 ## WinRiver University Program
 - 해당 프로그램은 교육 및 연구 라이선스로 발급받으면 VxWorks, Wind River Linux 등 다양한 Wind River 제품을 사용할 수 있다.
-- 하지만 이에 따른 제약사항이 존재한다. Knowledge Forum(Q&A), VxWorks 업데이트 페이지 등 정식 라이선스를 요구하는 페이지에 접근이 불가능하다. 따라서, VxWorks 관련 업데이트, 기술 문의 등의 서비스를 받을 수 없다.
+- 하지만 이에 따른 제약사항이 존재한다. Knowledge Forum(Q&A), VxWorks 업데이트 페이지 등 정식 라이선스를 요구하는 페이지에 접근이 불가능하다. 
+- 따라서, VxWorks 관련 업데이트, 기술 문의 등의 서비스를 받을 수 없다.
 
 
 
@@ -29,6 +30,7 @@ layout: post
 
 
 ### 2. 'Menu' -> 'SUPPORT & SERVICES' -> 'Wind River Education Services' -> 'University Program' 항목으로 이동
+
 ![image](/assets/img/2020-02-14-VxWorks/image1.png)
 
 
@@ -38,7 +40,7 @@ layout: post
 
 - 총 3개(Research Proposal, Addendum, Agreement)의 서류를 작성 후 Wind River University Program 담당 수신 메일 주소인 'university@windriver.com'로 제출한다.
 - 서류 심사 절차가 이루어지며, 이후 서류 내용이 부족하거나 미흡한 경우 메일이 오며, 추가로 서류 제출을 해야 한다.
-- 필자는 연구 목적으로 University Program 라이선스를 신청하였으며, 1번의 부가적인 서류 제출 이후 University Program 라이선스를 발급받았다.
+- 연구 목적으로 University Program 라이선스를 신청하였으며, 1번의 부가적인 서류 제출 이후 University Program 라이선스를 발급받았다. 
 - 자세한 내용은 해당 페이지의 'Frequently Asked Questions: University Program' 항목을 참고하면 된다.
 
 
@@ -124,7 +126,8 @@ layout: post
 
 ![image](/assets/img/2020-02-14-VxWorks/image15.png)
 
-- 'Host ID*'는 PC의 MAC 주소로 cmd 창에서 'ipconfig -all'를 입력하여 확인할 수 있다. '이더넷 어댑터 이더넷' 항목의 물리적 주소에서 '-'를 제외한 12자리 입력한다.
+- 'Host ID*'는 PC의 MAC 주소로 cmd 창에서 'ipconfig -all'를 입력하여 확인할 수 있다. 
+- '이더넷 어댑터 이더넷' 항목의 물리적 주소에서 '-'를 제외한 12자리 입력한다.
 
 ![image](/assets/img/2020-02-14-VxWorks/image16.png)
 
@@ -148,7 +151,8 @@ layout: post
 
 ![image](/assets/img/2020-02-14-VxWorks/image19.png)
 
-- 'C\Wind River\license'(Wind River Workbench 설치된 경로)로 이동한 다음 'license.lic' 파일을 생성한다. 해당 파일에 노드락 라이선스 파일 내용을 복사한다.
+- 'C\Wind River\license'(Wind River Workbench 설치된 경로)로 이동한 다음 'license.lic' 파일을 생성한다. 
+- 해당 파일에 노드락 라이선스 파일 내용을 복사한다.
 
 
 ### 11. Wind River Workbench 실행
