--- a/_posts/2020-02-15-VxWorks2.md
+++ b/_posts/2020-02-15-VxWorks2.md
@@ -1,11 +1,11 @@
 ---
 title: "Wind River Workbench에 BSP 설치 및 설정"
 excerpt: "Wind River Workbench에 Sabre Lite BSP 설치 및 설정한다."
-
 categories:
   - VxWorks
-
+  - Sabre Lite
 last_modified_at: 2020-02-16
+layout: post
 ---
 - Wind River Workbench에 Sabre Lite BSP 설치 및 설정한다.
 
@@ -45,10 +45,12 @@ last_modified_at: 2020-02-16
 
 
 ### 4. 'Product Maintenace' 실행
+
 ![image](/assets/img/2020-02-15-VxWorks/image3.png)
 
 
 ### 5. 'Patch' 클릭
+
 ![image](/assets/img/2020-02-15-VxWorks/image4.png)
 
 
@@ -57,7 +59,7 @@ last_modified_at: 2020-02-16
 ![image](/assets/img/2020-02-15-VxWorks/image5.png)
 
 
-### 7. Wind River Workbench 재시작 후 프로젝트 생성할 때 'Board support pacakge'에서 설치한 'imx6_sabrelite' 선택 가능
-- BSP 선택 후 프로젝트를 생성하면 Sabre Lite 보드에서 실행되는 애플리케이션을 빌드할 수 있다.
+### 7. Wind River Workbench 재시작 후 프로젝트 생성할 때 'Board support pacakge'에서 설치한 'imx6_sabrelite' 클릭 가능
+- BSP 클릭 후 프로젝트를 생성하면 Sabre Lite 타겟에서 실행되는 애플리케이션을 빌드할 수 있다.
 
 ![image](/assets/img/2020-02-15-VxWorks/image6.png)
