--- a/_posts/2020-02-16-VxWorks3.md
+++ b/_posts/2020-02-16-VxWorks3.md
@@ -2,7 +2,8 @@
 title: "Sabre Lite에 VxWorks Booting"
 excerpt: "Sabre Lite에 VxWorks 6.9 Booting 명령어 및 자동 부팅 환경 변수 등록한다."
 categories:
-  - RTOS
+  - VxWorks
+  - Sabre Lite
 last_modified_at: 2020-02-16
 layout: post
 ---
@@ -12,7 +13,7 @@ layout: post
 
 ## 설치 환경
 - 타겟 환경: Freescale i.mx6 Sabre Lite에 U-Boot 포팅
-- Sabre Lite BSP로 빌드한 vxWorks.bin 파일이 micro sd 카드에 올려져 보드에 삽입됨
+- Sabre Lite BSP로 빌드한 vxWorks.bin 파일을 micro sd 카드에 이동 후 보드에 삽입한다.
 
 
 
@@ -41,5 +42,3 @@ $ saveenv
 # bootcmd 명령어 수행
 $ run distro_bootcmd
 ```
-
-출처: <https://skywheel.tistory.com/entry/uboot-%EB%AA%85%EB%A0%B9%EC%96%B4-%EB%B0%8F-%ED%99%98%EA%B2%BD%EB%B3%80%EC%88%98-%EC%A0%95%EB%A6%AC>
