--- a/_posts/2020-02-20-Linux3.md
+++ b/_posts/2020-02-20-Linux3.md
@@ -8,7 +8,6 @@ last_modified_at: 2020-02-20
 layout: post
 ---
 - ARM Sabre Lite에 리눅스 커널을 포팅한다.
-
 - 본 글은 NXP 공식 홈페이지를 참고하여 작성하였다.
 
 출처: <https://boundarydevices.com/ubuntu-bionic-18-04-lts-for-i-mx6-7-boards-june-2018-kernel-4-9-x/>
@@ -23,14 +22,13 @@ layout: post
 
 ## Sabre Lite 커널 이미지 다운로드
 - <https://boundarydevices.com/ubuntu-bionic-18-04-lts-for-i-mx6-7-boards-june-2018-kernel-4-9-x/>에서 '20180729-nitrogen-4.9.x_1.0.0_ga-bionic-en_US-console_armhf.img.gz' 파일을 다운로드 한다.(해당 버전은 GUI가 아닌 CLI 버전)
-- 글을 작성하는 당시 최근 업로드된 게시글은 'Ubuntu Bionic 18.04.2 LTS for Nitrogen8M_Mini board – June 2019 (kernel 4.14.x)'으로 4.14 리눅스 커널 버전을 지원한다.
+- 글 작성 당시 최근 업로드된 게시글은 'Ubuntu Bionic 18.04.2 LTS for Nitrogen8M_Mini board – June 2019 (kernel 4.14.x)'으로 4.14 리눅스 커널 버전을 지원한다.
 
 출처: <https://boundarydevices.com/blog/ubuntu/>
 
 
 
 ## Sabre Lite 커널 이미지 쓰기
-
 ```bash
 $ sudo apt-get install -y gddrescue xz-utils util-linux
 
@@ -49,9 +47,9 @@ $ sudo ddrescue -D --force 20180729-nitrogen-4.9.x_1.0.0_ga-bionic-en_US-console
 
 
 ## 설정된 타겟 아이디/비밀번호
-- 해당 로그인 정보를 입력하여 리눅스에 로그인한다.<br>
-아이디/비밀번호: root/Boundary <br>
-아이디/비밀번호: ubuntu/Boundary
+- 해당 로그인 정보를 입력하여 리눅스에 로그인한다.
+- 아이디/비밀번호: root/Boundary
+- 아이디/비밀번호: ubuntu/Boundary
 
 
 
@@ -110,7 +108,8 @@ $ sudo reboot
 
 
 ## 타겟에 필요한 기본 패키지 설치
-- 타겟에는 기본적인 패키지가 설치되어 있지 않다. 필자의 경우 개발 및 연구 환경에 필요한 패키지를 설치하였다. 해당 부분은 선택사항이다.
+- 타겟에는 기본적인 패키지가 설치되어 있지 않다. 
+- 개발 및 연구 환경에 필요한 기본 패키지를 설치하며, 해당 부분은 선택사항이다.
 
 ```bash
 # update
@@ -144,7 +143,7 @@ $ sudo apt-get install -y valgrind
 
 
 ## vim 설정
-- 필자의 경우 리눅스 환경에서 vim을 주로 사용한다. 필자가 사용하는 vim 설정은 다음과 같다.
+- 리눅스 환경에서 사용하는 vim 설정은 다음과 같다.
 
 ```bash
 ~/.vimrc
@@ -194,7 +193,10 @@ au BufReadPost *
 
 
 ## Micro sd 카드의 메모리 용량 늘리기
-- 리눅스 커널을 micro sd 카드에 포팅할 때, micro sd 카드의 최소한의 용량만 사용하도록 설정한다. micro sd 카드에서 인식하는 메모리 용량이 매우 적으며, 패키지 몇 개만 설치하면 용량이 부족하다. 따라서 micro sd 카드의 기존 용량에 맞게 파티션 변경 필요하다.
+- 리눅스 커널을 micro sd 카드에 포팅할 때, micro sd 카드의 최소한의 용량만 사용하도록 설정한다. 
+- micro sd 카드에서 인식하는 메모리 용량이 매우 적으며, 패키지 몇 개만 설치하면 용량이 부족하다. 
+- 따라서 micro sd 카드의 기존 용량에 맞게 파티션 변경 필요하다. 
+
 
 
 ### 타겟(Sabre Lite)에서 수행
@@ -211,9 +213,10 @@ $ lsblk
 ![image](/assets/img/2020-02-20-Linux3/image2.png)
 ```
 
+
 ### 호스트에서 수행
 - Micro sd 카드를 호스트에 삽입한다.
-- Sabre Lite에서는 이미 sd카드를 사용 중이므로 파티션 크기 조절 불가하기에, 호스트에서 파티션 크기를 재조정 해야함
+- Sabre Lite에서는 이미 sd 카드를 사용 중이므로 파티션 크기 조절 불가하기에, 호스트에서 파티션 크기를 재조정 해야한다.
 
 ```bash
 # 운영체제가 micro sd 카드 메모리를 인식하는 크기는 3.4G(sdb1)
