--- a/_posts/2020-02-20-Linux4.md
+++ b/_posts/2020-02-20-Linux4.md
@@ -8,7 +8,6 @@ last_modified_at: 2020-02-20
 layout: post
 ---
 - NXP에서 다운받은 리눅스 커널 빌드 후 ARM Sabre Lite의 리눅스 커널 버전을 변경한다.
-
 - 본 글은 NXP 공식 홈페이지를 참고하여 작성하였다.
 - 만약 리눅스 커널을 수정하거나 NXP에서 공식 지원하는 커널 이외의 버전을 사용하고 싶다면, '리눅스 커널 빌드 ARM Sabre Lite(Kernel.org)' 글을 참고 해야한다.
 
@@ -68,7 +67,8 @@ $ cd ..
 ```
 
 ## galcore 다운로드 & 빌드
-- GPU를 가속하는 커널 모듈로서, 커널 버전이 4.1.15 이상인 경우 galcore 패키지를 무조건 빌드해야한다. 따라서 해당 리눅스 커널 버전은 galcore 패키지를 빌드 후 설치해야한다.
+- GPU를 가속하는 커널 모듈로서, 커널 버전이 4.1.15 이상인 경우 galcore 패키지를 무조건 빌드해야한다. 
+- 따라서 해당 리눅스 커널 버전은 galcore 패키지를 빌드 후 설치해야한다.
 
 ```bash
 $ cd ~
