--- a/_posts/2020-02-21-Linux5.md
+++ b/_posts/2020-02-21-Linux5.md
@@ -8,7 +8,6 @@ last_modified_at: 2020-02-21
 layout: post
 ---
 - Kernel.org에서 다운받은 리눅스 커널 빌드 후 ARM Sabre Lite의 리눅스 커널 버전을 변경한다.
-
 - 본 글은 여러 블로그를 참고하여 작성하였다.
 - 만약 리눅스 커널에 PREEMPT_RT 패치를 적용하고 싶다면, PREEMPT_RT 패치가 해당 리눅스 커널 버전을 지원해야한다. 리눅스 커널 버전은 <https://kernel.org/pub/linux/kernel>에서 확인 가능하고, PREEMPT_RT 패치 가능한 리눅스 커널 버전은 <http://cdn.kernel.org/pub/linux/kernel/projects/rt>에서 확인 가능하다.
 
@@ -16,8 +15,9 @@ layout: post
 
 ## 설치 환경
 - '리눅스 커널 빌드 환경 구축' 글을 참고하여 리눅스 커널 빌드 환경을 사전에 구축해야 한다.
-- 호스트: Ubuntu 18.04
-- 타겟: Sabre Lite에 Linux Kernel 4.14.87(해당 리눅스 버전의 PREEMPT_RT 패치 적용)
+- '리눅스 커널 포팅 - ARM Sabre Lite' 글을 참고하여 Sabre Lite에 리눅스를 설치해야 한다.
+- 호스트: Ubuntu 18.04(x86-64)
+- 타겟: Sabre Lite에 커널 버전을 Linux Kernel 4.14.87(해당 리눅스 버전의 PREEMPT_RT 패치 적용)로 변경
 
 
 
@@ -171,7 +171,8 @@ $ uname -a
 
 
 ## rt-tests(real-time task latency 측정)
-- 리눅스의 실시간성을 측정하는 테스트다. PREEMPT_RT 패치를 적용하지 않은 경우보다 최대 latency와 평균 latency가 개선된 것을 확인할 수 있다.
+- 리눅스의 실시간성을 측정하는 테스트다. 
+- PREEMPT_RT 패치를 적용하지 않은 경우보다 최대 latency와 평균 latency가 개선된 것을 확인할 수 있다.
 
 ```bash
 $ git clone git://git.kernel.org/pub/scm/utils/rt-tests/rt-tests.git
