--- a/_posts/2020-02-27-Sabre Lite1.md
+++ b/_posts/2020-02-27-Sabre Lite1.md
@@ -7,7 +7,6 @@ last_modified_at: 2020-02-27
 layout: post
 ---
 - Sabre Lite가 벽돌 상태가 되었을 때 이를 원래 상태로 복구하는 방법을 설명한다.
-
 - 본 글은 NXP 공식 홈페이지를 참고하여 작성하였다.
 - 보드에 전원이 들어온 상태에서 입력을 주어도 아무런 화면 출력이 안되는 경우를 벽돌(brick) 상태라고 한다.
 - Sabre Lite가 벽돌 상태가 되었을 때 이를 기존의 원래 상태로 복구하는 방법을 설명한다.
@@ -29,19 +28,15 @@ layout: post
 
 
 ## U-Boot 파일 다운로드
-- '<https://boundarydevices.com/u-boot-v2017-07/>' 다운로드 페이지에서 2017.07에 업로드된  'u-boot.nitrogen6q' 파일과 'upgrade.scr' 파일을 다운로드한다.
+- '<https://boundarydevices.com/u-boot-v2017-07/>' 다운로드 페이지에서 2017.07에 업로드된 'u-boot.nitrogen6q' 파일과 'upgrade.scr' 파일을 다운로드한다.
 - 다운로드 한 파일을 sd 카드로 이동한 다음 보드에 삽입한다.
 
 
 
-## Micro 5pin 케이블을 사용하여 데스크탑과 Sabre Lite 연결
-
-
-
 ## DIP Switch 변경
-- 다음과 같이 스위치를 변경한다.
-1 switch: OFF
-2 switch: ON
+-  Micro 5pin 케이블을 사용하여 데스크탑과 Sabre Lite 연결 후 다음과 같이 스위치를 변경한다.
+- 1 switch: OFF
+- 2 switch: ON 
 
 
 
@@ -63,8 +58,8 @@ $ sb_loader.exe -f u-boot.nitrogen6q
 
 ## DIP Switch 변경
 - 다음과 같이 스위치를 변경한다.
-1 switch: ON
-2 switch: OFF
+- 1 switch: ON
+- 2 switch: OFF
 
 
 
