--- a/_posts/2022-06-04-Essay2.md
+++ b/_posts/2022-06-04-Essay2.md
@@ -13,13 +13,15 @@ layout: post
 
 
 
-- MISRA C와 MISRA CPP에서는 변수 자료형이 묵시적으로 형변환 되는 것을 금지한다.
-- unsigned 자료형 변수와 signed 자료형 변수를 연산할 떼 서로 묵시적으로 형변환 되거나, 큰 자료형을 작은 자료형으로 묵시적으로 형변환 할 때 규칙을 위배한다.
-- 해당 규칙으로 인하여, 개발자가 예상하지 못한 연산 결과로 인하여 side effect가 발생할 수 있다.
+- MISRA C와 MISRA C++에서는 자료형이 묵시적으로 형변환 되는 것을 금지한다.
+- unsigned 자료형 변수와 signed 자료형 변수가 연산할 때(Casting 충격), 큰 자료형과 작은 자료형이 연산할 때 묵시적 형변환이 발생하여 하단 규칙들을 위배한다.
+- 해당 규칙들로 인하여, 개발자가 예상하지 못한 연산 결과로 인하여 side effect가 발생할 수 있다.
 
 
 
-## 연관 MISRA C, MISRA C++ 규칙
+## 연관 MISRA C 2012, MISRA C++ 2008 규칙
+
+
 ### MISRA C 2012
 - MISRA_C_2012_10_03 - 표현식의 값은 더 작은 essential 타입이나 다른 essential 타입 분류에 타입를 갖는 객체에 할당되지 않아야 함
 - MISRA_C_2012_10_04 - 일반 산술 변환이 수행되는 연산자의 두 피연산자들은 필히 같은 essential 타입 분류에 속하는 타입이어야 함
@@ -40,29 +42,23 @@ layout: post
 
 
 
-## 수정 방향
-- 함수 반환값, 함수 매개변수, 변수 연산 결과가 다른 자료형으로 묵시적 형변환 되는 경우 발생하며, 명시적 형변환을 사용하여 위배된 규칙을 수정할 수 있다.
-- 그러나 함수 코드가 길어지고 로직이 복잡할수록 코드 분석에 많은 시간이 소요되므로 위배 수정이 어려워 진다.
-- 따라서 규칙 위배를 수정하기 위한 가장 좋은 방법은 프로그램 설계할 때 크기와 부호를 고려하여 자료형을 사용하는 것이다.
-- 전체적인 프로그램 로직을 잘 고려하여, 묵시적 형변환이 발생하지 않도록 올바른 자료형으로 변수를 선언해야 한다.
-- 해당 규칙을 수정하면 Type_Overrun, Type_Underrun, Buffer_Overrun, Buffer_Underrun 취약점 또한 예방할 수 있다.
-
-
-
 ## 위험 요인
-- 해당 규칙 위배로 인한 위험 요인 예제로 2가지를 설명할 수 있다.
-- 다음 예제는 unsigned 정수 자료형 값과 signed 정수 자료형 값을 연산 할 때 발생하는 "Casting 충격"이다.
-- "Casting 충격"은 연산에서 unsigned 정수 값과 signed 정수 값을 연산(비교 연산자 포함)할 때, signed 정수 자료형 값이 unsigned 자료형으로 묵시적 형변환이 발생한다. 음수는 매우 큰 양수로 바뀌며, 이로 인하여 개발자가 의도하지 않은 연산 결과가 나올 수 있다.
+- 해당 규칙 위배가 발생하는 위험 요인은 크게 2가지가 있다.
 
-예제) int32_t, uint32_t 자료형 기준으로 Casting 충격 발생<br>
-int32_t 최소값: -2147483648<br>
-int32_t 최대값: 2147483647<br>
-uint32_t 최소값: 0<br>
+
+### Casting 충격
+- 첫 번째는 unsigned 정수 자료형 값과 signed 정수 자료형의 값을 연산 할 때 발생하는 "Casting 충격"이다. 
+- "Casting 충격"은 연산에서 unsigned 정수 값과 signed 정수 값을 연산(비교 연산자 포함)할 때, signed 정수 자료형 값이 unsigned 자료형으로 묵시적 형변환이 발생한다. 음수는 매우 큰 양수로 바뀌며, 이로 인하여 의도하지 않은 연산 결과가 나올 수 있다.
+
+예제) int32_t, uint32_t 자료형 기준으로 Casting 충격 발생
+int32_t 최소값: -2147483648
+int32_t 최대값: 2147483647
+uint32_t 최소값: 0
 uint32_t 최대값: 4294967295
 
 ![image](/assets/img/2022-06-04-Essay2/image1.png)
 
-- a는 음수고 b는 양수로 조건문이 거짓이 될 것 같지만, "Casting 충격"이 발생하여 a는 unsigned 정수 자료형(2147483648U)으로 묵시적 형변환되어 조건문은 참이 된다.
+- a는 음수고 b는 양수로 조건문이 거짓이 될 것 같지만, "Casting 충격"이 발생하여 a는 unsigned 정수 자료형으로 묵시적 형변환되어 2147483648U이 되어 조건문은 참이 된다.
 
 예제)
 ```c
@@ -75,9 +71,43 @@ if (a > b) {
 }
 ```
 
+
+### 큰 자료형과 작은 자료형 연산
+- 두 번째는 큰 자료형과 작은 자료형이 연산할 때, 묵시적으로 형변환 할 때 발생하는 경우다.
+- 큰 자료형과 작은 자료형이 연산할 때, 작은 자료형이 큰 자료형으로 묵시적 형변환이 발생한다. 
+- 작은 자료형(int 자료형)이 큰 자료형(double 자료형)으로 묵시적 형변환하는 경우, 코딩 규칙(MISRA_C_2012_10_03, MISRA_C_2012_10_06, MISRA_CPP_05_00_05)을 위배 한다.
+
+			자료형 확장(묵시적 형변환) -> 
+char < short < int < long < long long < float < double < long double
+
+* 같은 크기를 가지는 unsigned 자료형은 signed 자료형 보다 크기가 크다.
+예제) int32_t < uint32_t
+
+예제)
+```c
+int32_t foo(int64_t a, int32_t b) {
+    // 묵시적 형변환 발생(a는 작은 자료형인 int32_t로 묵시적 형변환)
+    return a + b;
+}
+
+float_t boo(double_t a, int32_t b) {
+    // 묵시적 형변환 발생(b는 double_t로, a + b는 float_t로 묵시적 형변환)
+    return a + b;
+}
+```
+
+
+
+## 수정 방향
+- 함수 반환값, 함수 매개변수, 변수 연산 결과가 다른 자료형으로 묵시적 형변환 되는 경우 발생하며, 명시적 형변환을 사용하여 위배된 규칙을 수정할 수 있다.
+- 그러나 함수 코드가 길어지고 로직이 복잡할수록 코드 분석에 많은 시간이 소요되므로 위배 수정이 어려워 진다.
+- 따라서 규칙 위배를 수정하기 위한 가장 좋은 방법은 프로그램 설계할 때 크기와 부호를 고려하여 자료형을 사용하는 것이다.
+- 전체적인 프로그램 로직을 잘 고려하여, 묵시적 형변환이 발생하지 않도록 올바른 자료형으로 변수를 선언해야 한다.
+- 해당 규칙을 수정하면 Type_Overrun, Type_Underrun, Buffer_Overrun, Buffer_Underrun 취약점 또한 예방할 수 있다.
+
 - 다음 예제는 규칙 위배가 발생하지 않도록 변수 자료형을 설계하는 방법이다.
 - 명시적 형변환을 통해 위배를 수정 할 수 있으나, 프로그램 로직을 고려하여 올바른 자료형으로 변수를 선언하는 것을 권고한다.
-- 함수 로직이 길어지는 경우 묵시적 형변환이 발생하는 모든 연산에 명시적 형변환을 수행해야하며, 이로 인해 코드 가독성이 떨어지고 에상치 못한 변수의 값 손실이 발생 할 수 있다.
+- 함수 로직이 길어지는 경우 묵시적 형변환이 발생하는 모든 연산에 명시적 형변환을 수행해야하며, 이로 인해 코드 가독성이 떨어지고 에상하지 못한 변수의 값 손실이 발생 할 수 있다.
 
 예제)
 ```c
