--- a/_posts/2020-02-17-VxWorks4.md
+++ b/_posts/2020-02-17-VxWorks4.md
@@ -1,12 +1,12 @@
 ---
 title: "Workbench Simulator 테스트"
-excerpt: "태스크를 생성하여 결과를 출력하는 예제를 Workbench Simulator에서 테스트한다."
+excerpt: "태스크 생성하여 결과를 출력 예제를 Workbench Simulator에서 수행한다."
 categories:
-  - RTOS
+  - VxWorks
 last_modified_at: 2020-02-16
 layout: post
 ---
-- 태스크 생성하여 결과를 출력하는 예제를 Workbench Simulator에서 테스트한다.
+- 태스크 생성하여 결과를 출력 예제를 Workbench Simulator에서 수행한다.
 
 
 
@@ -18,6 +18,8 @@ layout: post
 
 
 ## Booting: SImulator Targets
+
+
 ### 1. Target Console 설정
 - 상단 메뉴바 -> Window -> Preference -> Wind River -> Target Management -> Target Console -> 하단 이미지의 두 개 항목 체크 해제한다.
 
@@ -72,7 +74,7 @@ void CreateTasks(void)
 
 
 ### 4. 빌드 된 파일을 Task에 추가한 다음 실행
-- Remote Systems -> vxsim0 -> Wind River Launches -> VxWorsk Kernel Task 우클릭 -> Create a new launch configuration
+- Remote Systems -> vxsim0 -> Wind River Launches -> VxWorsk Kernel Task 오른쪽 버튼 클릭 -> Create a new launch configuration
 
 ![image](/assets/img/2020-02-17-VxWorks/image3.png)
 
@@ -80,6 +82,6 @@ void CreateTasks(void)
 
 ![image](/assets/img/2020-02-17-VxWorks/image4.png)
 
-- 시뮬레이터를 실행하면 테스크가 생성된 다음, 주기적으로 결과를 출력하는 예제를 터미널 창에서 확인할 수 있다.
+- 시뮬레이터를 실행하면 테스크가 생성된 다음, 주기적으로 태스크 정보를 출력하는 예제를 터미널에서 확인할 수 있다.
 
 출처: <https://support.dce.felk.cvut.cz/psr/cviceni/intro/>
