--- a/_posts/2020-03-01-JMeter1.md
+++ b/_posts/2020-03-01-JMeter1.md
@@ -34,10 +34,9 @@ layout: post
 - 좌단 메뉴바 -> TestPlan 우클릭 -> Add -> Trhead(Users) -> Thrad Group
 
 - Number of Threads (users): 동시 접속자수
-- Ramp-Up Period (in seconds): 사용자 패턴을 고려하여 사용자가 몇 초에 한번 서비스를  제공 받는 시간 <br>
+- Ramp-Up Period (in seconds): 사용자 패턴을 고려하여 사용자가 몇 초에 한번 서비스를  제공 받는 시간
 ex) Ramp-Up Period (in seconds) 1: 1초에 한 번 사용자가 페이지를 클릭하는 경우
-
-- Loop Count: 위 2가지 설정을 기반으로 몇 번 반복해서 서버측으로 요청을 전송할 것 인지  결정 <br>
+- Loop Count: 위 2가지 설정을 기반으로 몇 번 반복해서 서버측으로 요청을 전송할 것 인지  결정
 ex) 각 항목이 1,1,1: JMeter가 1명의 user를 1초에 한 번씩 1번 반복해서 호출하는 경우
 
 
