--- a/_posts/2020-03-28-Web Server1.md
+++ b/_posts/2020-03-28-Web Server1.md
@@ -1,12 +1,12 @@
 ---
 title: "Web Server & Web Application Server"
-excerpt: "Web Server와 Web Application Server(WAS)의 차이점을 설명한다."
+excerpt: "Web Server와 Web Application Server(WAS)의 차이점을 소개한다."
 categories:
   - Web
 last_modified_at: 2020-03-28
 layout: post
 ---
-- Web Server와 Web Application Server(WAS)의 차이점을 설명한다.
+- Web Server와 Web Application Server(WAS)의 차이점을 소개한다.
 
 
 
@@ -14,14 +14,14 @@ layout: post
 - 클라이언트의 요청을 받은 정적인 데이터(웹 페이지, 이미지)를 HTTP 프로토콜을 통해 전송한다.
 - 클라이언트의 요청 중 자체적으로 처리할 수 없는 동적인 데이터 처리에 대해서는 WAS에 요청한다.
 - Web Server에서는 정적인 데이터를 처리하고 WAS에서는 동적인 데이터를 처리하는 방식으로 양분하여 처리하는 방식을 사용한다.
-- 이를 통하여, 각 서버에서 처리하는 부하를 줄여줄 수 있다. <br>
+- 이를 통하여, 각 서버에서 처리하는 부하를 줄여줄 수 있다.
 ex) Apach, IIS, Nginx
 
 
 
 ## WAS(Web Application Server)
 - 클라이언트 요청을 받은 동적인 데이터(Web Server가 처리할 수 없는 데이터)를 처리하여 Web Server에 정적인 정보를 제공한다.
-- 일반적으로 WAS는 Web Server 기능을 내제하고 있기에, Web Server 없이 서비스가 가능하다. <br>
+- 일반적으로 WAS는 Web Server 기능을 내제하고 있기에, Web Server 없이 서비스가 가능하다.
 ex) Web Logic, Jeus, Tomcat, JBoss
 
 
