--- a/_posts/2020-04-21-Xenomai2.md
+++ b/_posts/2020-04-21-Xenomai2.md
@@ -67,7 +67,7 @@ $ sudo /usr/xenomai/bin/latency
 - Tab 문자 적용할 때 시스템 내에서 설정된 공란(space) 크기 확인이 필요하다.
 - 해당 애플리케이션은 Xenomai에서 제공하는 자체 RTOS API인 Alchemy다.
 
-```c
+```bash
 <Makefile>
 
 XENO_CONFIG := /usr/xenomai/bin/xeno-config
