--- a/_posts/2020-04-22-Eclipse2.md
+++ b/_posts/2020-04-22-Eclipse2.md
@@ -1,11 +1,10 @@
 ---
 title: "Eclipse 선택 설정"
 excerpt: "Eclipse(STS)를 사용할 때 선택적으로 사용하는 설정을 소개한다."
-
 categories:
   - Tool
-
 last_modified_at: 2020-04-22
+layout: post
 ---
 - Eclipse(STS)를 사용할 때 선택적으로 사용하는 설정을 소개한다.
 
