--- a/_posts/2020-04-22-Eclipse3.md
+++ b/_posts/2020-04-22-Eclipse3.md
@@ -1,11 +1,10 @@
 ---
 title: "Eclipse 기타 사용 팁"
 excerpt: "Eclipse(STS)를 사용할 때 가끔씩 필요한 기타 사용 팁을 소개한다."
-
 categories:
   - Tool
-
 last_modified_at: 2020-04-22
+layout: post
 ---
 - Eclipse(STS)를 사용할 때 가끔씩 필요한 기타 사용 팁을 소개한다.
 
@@ -49,4 +48,3 @@ rootProject.name = 'Test'
 - 드래그하여서 외부 창으로 만든 후 하단 이미지의 빨간색 박스 위치로 드래그한다.
 
 ![image](/assets/images/2020-04-22-Eclipse3/image5.png)
-
