--- a/_posts/2020-06-02-MISRAC4 .md
+++ b/_posts/2020-06-02-MISRAC4 .md
@@ -8,8 +8,32 @@ last_modified_at: 2020-06-02
 layout: post
 ---
 - 본 글에서는 선언과 정의의 차이를 소개한다. 
+- 해당 용어들은 MISRA C 2012 가이드라인에서 자주 언급된다.
 
-- 해당 용어들은 MISRA C:2012 가이드라인에서 자주 언급된다.
+
+
+## 선언
+- 컴파일러에게 변수의 정보만을 제공하며, 실제 메모리를 사용하지 않는다.
+
+```c
+// extern 변수 선언
+extern int a;
+
+// 함수 선언
+int a();
+
+// typedef 
+typedef unsigned int UINT;
+
+// 매크로 선언
+#define SUM(a, b) (a + b)
+
+// 구조체 선언
+struct st s ;
+
+// 열거형 선언
+enum DayOfWeek week;
+```
 
 
 
@@ -42,31 +66,6 @@ enum DayOfWeek {
     Friday,
     Saturday
 };
-```
-
-
-
-## 선언
-- 컴파일러에게 변수의 정보만을 제공하며, 실제 메모리를 사용하지 않는다.
-
-```c
-// extern 변수 선언
-extern int a;
-
-// 함수 선언
-int a();
-
-// typedef 
-typedef unsigned int UINT;
-
-// 매크로 선언
-#define SUM(a, b) (a + b)
-
-// 구조체 선언
-struct st s ;
-
-// 열거형 선언
-enum DayOfWeek week;
 ```
 
 
