--- a/_posts/2020-06-10-MISRAC5.md
+++ b/_posts/2020-06-10-MISRAC5.md
@@ -1,13 +1,13 @@
 ---
-title: "MISRA C: 2012_02_01 Unreachable code가 있어서는 안된다."
-excerpt: "MISRA C: 2012_02_01 규칙을 소개한다."
+title: "MISRA C 2012_02_01 Unreachable code가 있어서는 안된다."
+excerpt: "MISRA C 2012_02_01 규칙을 소개한다."
 categories:
   - MISRA C
   - SW Test
 last_modified_at: 2020-06-10
 layout: post
 ---
-- 본 글에서는 MISRA C: 2012_02_01 규칙을 소개한다.
+- 본 글에서는 MISRA C 2012_02_01 규칙을 소개한다.
 
 
 
