--- a/_posts/2020-06-30-MISRAC8.md
+++ b/_posts/2020-06-30-MISRAC8.md
@@ -1,13 +1,13 @@
 ---
-title: "MISRA C: 2012_05_08, 09 외부 및 내부 연결을 가지는 변수와 함수 식별자는 유일해야 한다."
-excerpt: "MISRA C: 2012_05_08, 09 규칙을 소개한다."
+title: "MISRA C 2012_05_08, 09 외부 및 내부 연결을 가지는 변수와 함수 식별자는 유일해야 한다."
+excerpt: "MISRA C 2012_05_08, 09 규칙을 소개한다."
 categories:
   - MISRA C
   - SW Test
 last_modified_at: 2020-06-30
 layout: post
 ---
-- 본 글에서는 MISRA C: 2012_05_08, 09 규칙을 소개한다.
+- 본 글에서는 MISRA C 2012_05_08, 09 규칙을 소개한다.
 
 
 
