--- a/_posts/2020-08-04-MISRAC++1.md
+++ b/_posts/2020-08-04-MISRAC++1.md
@@ -1,13 +1,13 @@
 ---
-title: "MISRA C++:2008 가이드라인 개요"
-excerpt: "안전성과 신뢰성이 요구되는 임베디드시스템에서 사용되는 MISRA C++:2008 가이드라인을 소개한다."
+title: "MISRA C++ 2008 가이드라인 개요"
+excerpt: "안전성과 신뢰성이 요구되는 임베디드시스템에서 사용되는 MISRA C++ 2008 가이드라인을 소개한다."
 categories:
   - MISRA C++
   - SW Test
 last_modified_at: 2020-08-04
 layout: post
 ---
-- 안전성과 신뢰성이 요구되는 임베디드시스템에서 사용되는 MISRA C++:2008 가이드라인을 소개한다.
+- 안전성과 신뢰성이 요구되는 임베디드시스템에서 사용되는 MISRA C++ 2008 가이드라인을 소개한다.
 
 
 
@@ -21,7 +21,7 @@ layout: post
 ## MISRA C++란?
 - MISRA(Motor Industry Software Reliability Association) 자동차 산업에서 개발된 C++ 개발 가이드라인이다.
 - 안전성, 보안성, 이식성, 신뢰성이 요구되는 안전 필수 시스템(safety-critical- systems, 자동차, 우주, 항공, 국방, 철도 등) 소프트웨어 개발에서 대표적인 표준 가이드라인으로 사용되고 있다.
-- MISRA C++:2008 가이드라인을 통하여 C++ 안전성을 검증 할 수 있다.
+- MISRA C++ 2008 가이드라인을 통하여 C++ 안전성을 검증 할 수 있다.
 - <span style="color:red; font-weight: bold">C++ 03 표준인 ISO 14882 : 2003에 정의된 대로만 사용해야 하며, 언어 확장 사용을 금지한다.</span>
 - 총 228개의 규칙으로 구성된다. 
 
@@ -34,4 +34,4 @@ layout: post
 - Deviation의 대부분은 입출력 작업에서 발생하며, 출력 프로세스를 다른 부분과 분리되도록 설계할 것을 권고한다.
 
 ex) Deviation 예제<br>
-마이크로프로세서 하드웨어와의 인터페이스에 작성된 소스 코드는 언어 확장을 사용해야 하므로, MISRA C++:2008 규칙을 위배하게 된다.
+마이크로프로세서 하드웨어와의 인터페이스에 작성된 소스 코드는 언어 확장을 사용해야 하므로, MISRA C++ 2008 규칙을 위배하게 된다.
