--- a/_posts/2020-08-08-MISRAC++2.md
+++ b/_posts/2020-08-08-MISRAC++2.md
@@ -1,13 +1,13 @@
 ---
-title: "MISRA C++:2008 가이드라인 표기 방식"
-excerpt: "MISRA C++:2008 가이드라인 표기 방식을 소개한다."
+title: "MISRA C++ 2008 가이드라인 표기 방식"
+excerpt: "MISRA C++ 2008 가이드라인 표기 방식을 소개한다."
 categories:
   - MISRA C
   - SW Test
 last_modified_at: 2020-08-08
 layout: post
 ---
-- MISRA C++:2008 가이드라인 표기 방식을 소개한다.
+- MISRA C++ 2008 가이드라인 표기 방식을 소개한다.
 
 
 
