--- a/_posts/2020-04-22-Eclipse1.md
+++ b/_posts/2020-04-22-Eclipse1.md
@@ -1,11 +1,10 @@
 ---
 title: "Eclipse 기본 설정"
 excerpt: "Eclipse(STS)를 사용할 때 기본적으로 사용하는 설정을 소개한다."
-
 categories:
   - Tool
-
 last_modified_at: 2020-04-22
+layout: post
 ---
 - Eclipse(STS)를 사용할 때 기본적으로 사용하는 설정을 소개한다.
 
@@ -19,8 +18,8 @@ last_modified_at: 2020-04-22
 
 
 ## Font 크기 변경
-- Eclipse 코드의 font 크기를 11로 변경한다.
-- Windows ->  Preference -> General -> Appearance -> Colors and Fonts -> Basic  ->  Text Font -> 크기 11로 변경
+- Eclipse 코드 편집기의 font 크기를 11로 변경한다.
+- Windows ->  Preference -> General -> Appearance -> Colors and Fonts -> Basic -> Text Font -> 크기 11로 변경
 
 
 
@@ -29,7 +28,7 @@ last_modified_at: 2020-04-22
 - Windows ->  Preference -> General -> Editors -> Text Editors -> Undo history size : 20000
 
 ## 자동 새로고침
-- 파일을 프로젝트에 업로드 하였지만 eclipse가 새로고침하지 않아서 파일을 인식하지 못하는 경우를 방지한다.
+- 파일을 프로젝트에 업로드 하였지만 eclipse가 자동 새로고침 하지 않아서 파일을 인식하지 못하는 경우를 방지한다.
 - Windows ->  Preference -> General -> Workspace -> Refresh using native hooks or polling
 
 
@@ -50,7 +49,7 @@ last_modified_at: 2020-04-22
 
 ## Console 출력 버퍼 크기 설정
 - Console이 저장하는 코드 크기를 증가시킨다. 대용량의 코드가 출력될 때 이를 저장하지 못하는 경우를 방지한다.
-- Window -> Preperences -> Run/Debug -> Console -> Limit Console output 의 체크해제 또는 Console buffer size (characters) 늘이기
+- Window -> Preperences -> Run/Debug -> Console -> Limit Console output 의 체크해제 또는 Console buffer size (characters) 늘리기
 
 
 
