--- a/_posts/2020-04-22-Eclipse4.md
+++ b/_posts/2020-04-22-Eclipse4.md
@@ -1,11 +1,10 @@
 ---
 title: "Eclipse 단축키"
 excerpt: "Eclipse(STS)를 사용할 때 자주 사용하는 단축키를 소개한다."
-
 categories:
   - Tool
-
 last_modified_at: 2020-04-22
+layout: post
 ---
 - Eclipse(STS)를 사용할 때 자주 사용하는 단축키를 소개한다.
 
