--- a/_posts/2020-05-15-MISRAC1.md
+++ b/_posts/2020-05-15-MISRAC1.md
@@ -1,6 +1,6 @@
 ---
-title: "MISRA C:2012 가이드라인 개요"
-excerpt: "안전성과 신뢰성이 요구되는 임베디드시스템에서 사용되는 MISRA C:2012 가이드라인을 소개한다."
+title: "MISRA C 2012 가이드라인 개요"
+excerpt: "안전성과 신뢰성이 요구되는 임베디드시스템에서 사용되는 MISRA C 2012 가이드라인을 소개한다."
 categories:
   - MISRA C
   - SW Test
@@ -23,22 +23,23 @@ layout: post
 ## MISRA C란?
 - MISRA(Motor Industry Software Reliability Association) 자동차 산업에서 개발된 C언어 개발 가이드라인이다.
 - 안전성, 보안성, 이식성, 신뢰성이 요구되는 안전 필수 시스템(safety-critical- systems, 자동차, 우주, 항공, 국방, 철도 등) 소프트웨어 개발에서 대표적인 표준 가이드라인으로 사용되고 있다.
-- MISRA C:2012 가이드라인과 MISRA C:2012 - Addendum 1 가이드라인을 통하여 C언어 보안 표준을 모두 검증 할 수 있다. 이는 시큐어 코딩 표준인 C Secure와 CERT C를 MISRA C:2012 가이드라인에 매핑한 MISRA C:2012 Addendum 2, 3에서 확인할 수 있다.
+- MISRA C 2012 가이드라인과 MISRA C 2012 - Addendum 1 가이드라인을 통하여 C언어 보안 표준을 모두 검증 할 수 있다. 이는 시큐어 코딩 표준인 C Secure와 CERT C를 MISRA C 2012 가이드라인에 매핑한 MISRA C 2012 Addendum 2, 3에서 확인할 수 있다.
+- 22.06 기준 정적시험 도구에서는 MISRA C 2012 - Addendum 1에서 발표한 14 security 규칙을 지원하지 않으며, 슈어소프트에서는 security 규칙을 하반기에 릴리즈 할 예정이다.
 
 
 
 ## 개정 이력
-- MISRA C:1998
+- MISRA C1998
   -- 127 rules / 93 required / 34 advisory
-- MISRA C:2004
+- MISRA C2004
   -- 142 rules / 122 required / 20 advisory
-- MISRA C:2012
+- MISRA C 2012
   -- 143 rules/ 16 directives, decidable/undecidable, 10 mandatory /110 required / 39 advisory, single translation unit / system
-- MISRA C:2012 - Addendum 1
+- MISRA C 2012 - Addendum 1
   -- __14 security guidelines__, 13 rules / 1 directives, 6 mandatory / 8 required
-- MISRA C:2012 - Addendum 2
-  -- Coverage of MISRA C:2012 against ISO/IEC TS 17961:2013 ‘C Secure’
-- MISRA C:2012 - Addendum 3
-  -- Coverage of MISRA C:2012 against ‘CERT C’
+- MISRA C 2012 - Addendum 2
+  -- Coverage of MISRA C 2012 against ISO/IEC TS 17961:2013 ‘C Secure’
+- MISRA C 2012 - Addendum 3
+  -- Coverage of MISRA C 2012 against ‘CERT C’
 - MISRA Compliance:2016
   -- Define what is meant by MISRA Compliance , Provide clearer guidance on the use of deviations
