--- a/_posts/2020-05-22-MISRAC2.md
+++ b/_posts/2020-05-22-MISRAC2.md
@@ -1,13 +1,13 @@
 ---
-title: "MISRA C:2012 가이드라인 표기 방식"
-excerpt: "MISRA C:2012 가이드라인 표기 방식을 소개한다."
+title: "MISRA C 2012 가이드라인 표기 방식"
+excerpt: "MISRA C 2012 가이드라인 표기 방식을 소개한다."
 categories:
   - MISRA C
   - SW Test
 last_modified_at: 2020-05-22
 layout: post
 ---
-- MISRA C:2012 가이드라인 표기 방식을 소개한다.
+- MISRA C 2012 가이드라인 표기 방식을 소개한다.
 
 
 
@@ -71,7 +71,7 @@ layout: post
 - Deviation에 대한 자세한 설명 및 작성방법은 'MISRA Compliance:2016'에 기술되어 있다. <br>
 ex) Deviation 예제 - 입출력 <br>
 메모리에 매핑된 I/O 포트에 접근하기 위한 일반적인 방법은 고정된 메모리 주소에 접근하는 것이다. <br>
-하지만 이는 정수형 자료형을 포인터로 변환하는 작업을 수행하므로, MISRA C:2012 가이드라인을 위배하게 된다.
+하지만 이는 정수형 자료형을 포인터로 변환하는 작업을 수행하므로, MISRA C 2012 가이드라인을 위배하게 된다.
 
 ```c
 #define PORT (*(volatile unsigned char *)0x0002)
