--- a/_posts/2020-07-15-Project Lab1-1.md
+++ b/_posts/2020-07-15-Project Lab1-1.md
@@ -4,16 +4,12 @@ excerpt: "연구실 홈페이지 개발 프로젝트의 개발 환경 구축 과
 categories:
   - Web
   - Project Lab
-  - Tool
 last_modified_at: 2021-04-11
 layout: post
 ---
 - 연구실 홈페이지 개발 프로젝트의 인텔리제이 개발 환경 구축 과정을 소개한다.
+- 이클립스를 사용하여 개발 환경을 구축 한다면 'Project Lab 1-1. 개발 환경 구축(IntelliJ)' 게시글을 참고하면 된다.
 
-
-
-- 이클립스를 사용하여 개발 환경을 구축 한다면 다음 게시글을 참고하면 된다.
-Link: <https://scribnote5.github.io/web/project%20lab/Project-Lab1-2/>
 
 
 
@@ -46,9 +42,9 @@ Link: <https://scribnote5.github.io/web/project%20lab/Project-Lab1-2/>
 <https://goddaehee.tistory.com/183> <br>
 <https://byline.network/2018/11/13-28/> <br>
 
-- Open JDK를 설치 한다면 하단 출처를 참고한다.
+- eclipse 재단에서 관리하는 ADOPTIUM Open JDK를 추천하며 하단 출처에서 설치 할 수 있다.
 
-출처: <https://recipes4dev.tistory.com/173>
+출처: <https://adoptium.net/>
 
 
 
@@ -137,5 +133,4 @@ Link: https://www.jetbrains.com/ko-kr/idea/download/#section=windows
 
 ## IntelliJ 설치 이후...
 - 'IntelliJ 유용한 설정'은 IntelliJ를 유용하게 사용하는 설정들을 정리하였다. 해당 설정들은 여러 블로그를 참고하여 작성하였다.
-
-- IntelliJ 기본 설정: <https://scribnote5.github.io/categories/#tool>
+- IntelliJ 기본 설정은 'IntelliJ 유용한 설정' 게시글을 참고하면 된다.
