--- a/_posts/2020-07-15-Project Lab1-2.md
+++ b/_posts/2020-07-15-Project Lab1-2.md
@@ -4,15 +4,11 @@ excerpt: "연구실 홈페이지 개발 프로젝트의 개발 환경 구축 과
 categories:
   - Web
   - Project Lab
-last_modified_at: 2020-07-15
+last_modified_at: 2022-06-27
 layout: post
 ---
 - 연구실 홈페이지 개발 프로젝트의 이클립스 개발 환경 구축 과정을 소개한다.
-
-
-
-- 인텔리제이 사용하여 개발 환경을 구축 한다면 다음 게시글을 참고하면 된다.
-Link: <https://scribnote5.github.io/web/project%20lab/Project-Lab1-2/>
+- 인텔리제이 사용하여 개발 환경을 구축 한다면 'Project Lab 1-1. 개발 환경 구축(IntelliJ)'' 게시글을 참고하면 된다.
 
 
 
@@ -36,6 +32,7 @@ Link: <https://scribnote5.github.io/web/project%20lab/Project-Lab1-2/>
 - 상업용이 아닌 비상업용 개인 사용자는 ORACLE JDK를 버전과 패치 이력에 상관없이 무료로 사용할 수 있다. 즉, 업데이트 지원 종료까지 지속적으로 업데이트를 받을 수 있다. 기존 Oracle JDK 8의 경우 2019년 1월 이후 업데이트부터 라이센스 비용이 요구된다.
 - 하지만 ORACLE JDK를 상업용으로 사용한다면 라이선스 비용이 발생한다. ORACLE은 약 3년 주기로 LTS 서비스를 지원하는 JDK를 출시한다.
 - JDK 11과 같은 LTS JDK는 오라클이 명시한 지원기간까지 지속적으로 지원된다. JDK 11의 경우 Extended Support Until 기간까지 포함하면, 2026년 9월까지 지원된다. 지원기간은 하단 출처에서 확인 가능하다. 하지만 LTS가 지원되지 않는 JDK는 6개월만 지원된다.
+- 22.06.27 JDK LTS 버전은 17이다.
 
 출처: <https://www.oracle.com/java/technologies/java-se-support-roadmap.html> <br>
 
@@ -45,11 +42,11 @@ Link: <https://scribnote5.github.io/web/project%20lab/Project-Lab1-2/>
 
 출처: <https://mine-it-record.tistory.com/7> <br>
 <https://goddaehee.tistory.com/183> <br>
-<https://byline.network/2018/11/13-28/> <br>
+<https://byline.network/2018/11/13-28/>
 
-- Open JDK를 설치 한다면 하단 출처를 참고한다.
+- eclipse 재단에서 관리하는 ADOPTIUM Open JDK를 추천하며 하단 출처에서 설치 할 수 있다.
 
-출처: <https://recipes4dev.tistory.com/173>
+출처: <https://adoptium.net/>
 
 
 
@@ -172,11 +169,6 @@ C:\Users\<User>\Desktop\Spring\jdk-11.0.7\bin\javaw.exe
 
 ## STS 설치 이후...
 - STS 설치 이후 이클립스 내에서 설정이 필요하다.
-- 'Eclipse 기본 설정'은 필자가 개발에 필수적으로 사용하는 설정들을 정리하였기에 따라서 설정하는 것을 추천한다. 해당 설정들은 여러 블로그를 참고하여 작성하였다.
-- 'Eclipse 선택 설정'은 필자가 선택적으로 사용하는 설정들을 정리하였기에 사용자 취향에 따라서 선택적으로 적용하는 것을 추천한다.
-- 'Eclipse 단축키'는 eclipse에서 많이 사용하는 단축키를 정리하였다. 본격적인 개발 전 많이 사용하는 단축키를 익히면 개발 속도가 빨라질 것이다.
-
-- Eclipse 기본 설정: <https://scribnote5.github.io/web/project%20lab/tool/Eclipse1/>
-- Eclipse 선택 설정: <https://scribnote5.github.io/web/project%20lab/tool/Eclipse2/>
-- Eclipse 기타 사용 팁: <https://scribnote5.github.io/web/project%20lab/tool/Eclipse3/>
-- Eclipse 단축키: <https://scribnote5.github.io/web/project%20lab/tool/Eclipse4/>
+- 'Eclipse 기본 설정' 게시글은 필수적으로 사용하는 설정들을 정리 하였기에, 이를 따라서 설정하는 것을 추천한다. 해당 설정들은 여러 블로그를 참고하여 작성하였다.
+- 'Eclipse 선택 설정' 게시글은 사용자 취향에 따라서 선택적으로 적용하는 것을 추천한다.
+- 'Eclipse 단축키' 게시글은 eclipse에서 많이 사용하는 단축키를 정리하였다. 본격적인 개발 전 많이 사용하는 단축키를 익히면 개발 생산성을 향상할 수 있다.
