--- a/_posts/2020-07-18-IntelliJ1.md
+++ b/_posts/2020-07-18-IntelliJ1.md
@@ -7,15 +7,12 @@ last_modified_at: 2021-04-12
 layout: post
 ---
 - IntelliJ 설치 할 때 처음 적용하는 설정을 소개한다.
-
-
-
-- 설정은 개발자마다 다르며 필자가 주로 사용하는 설정은 다음과 같다.
+- 주로 사용하는 설정은 다음과 같다.
 
 
 
 ## JDK 선택
-- Project Structure for New Projects -> Project SDK: Add -> 다운 받은  jdk 선택
+- File -> Project Structure for New Projects -> Project SDK: Add -> 다운 받은 jdk 선택
 
 
 
@@ -44,6 +41,7 @@ layout: post
 ## 자동 정렬되는 문자 수 변경
 - HTML에서 자동 정렬 단축키를 사용할 때 정렬 기준이되는 문장의 문자 수를 변경한다.
 - Settings -> Editor -> Code Style -> HTML -> Other -> Hard wrap at 240로 변경한다.
+
 
 
 ## 작업 중인 파일에 따라서 Project 포커싱
@@ -135,7 +133,7 @@ spring:
 - 크롬 LiveReload 확장 프로그램은 프론트엔드 소스 코드가 변경될 때, 브라우저가 5초 이내로 이를 인식하고 자동으로 새로고침하는 기능이다.
 - 하단 URI에서 크롬 LiveReload 확장 프로그램을 추가할 수 있다.(FireFox도 해당 확장 프로그램이 존재한다.)
 
-Link: <https://chrome.google.com/webstore/detail/livereload/jnihajbhpnppcggbcgedagnkighmdlei>
+URL: <https://chrome.google.com/webstore/detail/livereload/jnihajbhpnppcggbcgedagnkighmdlei>
 
 - LiveReload 확장 프로그램 아이콘은 실행 될 때 뚜렷한 색 변화가 없으므로 유의해야 한다.
 - 해당 아이콘은 LiveReload가 실행 중인 상태다.
