--- a/_posts/2020-05-22-MISRAC2.md
+++ b/_posts/2020-05-22-MISRAC2.md
@@ -52,15 +52,15 @@ layout: post
 
 
 ### Mandatory guidelines
-- Mandatory category는 deviation(예외) 가이드라인이 존재하여도, 해당 가이드라인을 필수적으로 준수해야 한다.
+- Mandatory category는 필수적으로 준수해야 규칙으로, 예외를 허용하지 않는다.
 
 
 ### Required guidelines
-- Required category는 deviation 가이드라인을 고려하여, 해당 가이드라인을 준수해야 한다.
+- Required category는 필수적으로 준수해야 하는 규칙, 정당한 사유가 있으면 예외를 허용한다.
 
 
 ### Advisory guidelines
-- Advisory guidelines는 deviation 가이드라인을 선택적으로 고려하여, 준수해야하는 일종의 권고사항이다.
+- Advisory guidelines는 준수하는 것을 권고하는 규칙으로, 선택적으로 적용한다.
 
 
 
