--- a/_posts/2020-08-04-MISRA CPP1.md
+++ b/_posts/2020-08-04-MISRA CPP1.md
@@ -2,7 +2,7 @@
 title: "MISRA C++ 2008 가이드라인 개요"
 excerpt: "안전성과 신뢰성이 요구되는 임베디드시스템에서 사용되는 MISRA C++ 2008 가이드라인을 소개한다."
 categories:
-  - MISRA C++
+  - MISRA CPP
   - SW Test
 last_modified_at: 2020-08-04
 layout: post
