--- a/_posts/2020-08-08-MISRA CPP2.md
+++ b/_posts/2020-08-08-MISRA CPP2.md
@@ -2,7 +2,7 @@
 title: "MISRA C++ 2008 가이드라인 표기 방식"
 excerpt: "MISRA C++ 2008 가이드라인 표기 방식을 소개한다."
 categories:
-  - MISRA C
+  - MISRA CPP
   - SW Test
 last_modified_at: 2020-08-08
 layout: post
