--- a/_posts/2022-08-02-MISRAC_01_01.md
+++ b/_posts/2022-08-02-MISRAC_01_01.md
@@ -8,7 +8,7 @@ last_modified_at: 2022-08-02
 layout: post
 ---
 - MISRA C 2012_01_01 규칙을 소개한다.
-- 기존 MISRA C 2012 규칙을 분석 후 해석하여, 원본 내용과 의미가 다를 수 있으므로 양해 부탁드립니다. 해당 부분 피드백 주시면 반영하겠습니다. 
+- MISRA C 2012 규칙을 분석 후 해석하여, 원본 내용과 의미가 다를 수 있습니다. 해당 부분 피드백 주시면 반영하겠습니다. 
 
 
 
