--- a/_posts/2022-08-02-MISRAC_01_01.md
+++ b/_posts/2022-08-02-MISRAC_01_01.md
@@ -1,5 +1,5 @@
 ---
-title: "MISRA C 01_01 - 프로그램은 C 표준과 컴파일러 번역 제한을 준수해야 함"
+title: "MISRA C 2012_01_01 - 프로그램은 C 표준과 컴파일러 번역 제한을 준수해야 함"
 excerpt: "MISRA C 2012_01_01 규칙을 소개한다."
 categories:
   - MISRA C
@@ -14,8 +14,8 @@ layout: post
 
 ## [규칙 요약(위배 원인 -> 수정 방법)]
 - 프로그램이 C 표준과 컴파일러 번역 제한을 준수하지 않음
--> 1. C90 또는 C99 표준에서 명시된 C언어 특성과 라이브러리만 사용하며, 문법 및 제한사항 위배 금지
-2. 프로그램은 컴파일러 번역 제한 초과 금지
+- -> 1. C90 또는 C99 표준에서 명시된 C언어 특성과 라이브러리만 사용하며, 문법 및 제한사항 위배 금지
+- 2. 프로그램은 컴파일러 번역 제한 초과 금지
 
 
 
