--- a/_posts/2022-08-07-MISRAC_02_01.md
+++ b/_posts/2022-08-07-MISRAC_02_01.md
@@ -54,31 +54,51 @@ struct S
      uint32_t a : 2;
 };
 
-void foo(struct S s)
+uint32_t foo(struct S s)
 {
+     uint32_t output;
+
      // 구조체 S의 비트 필드 a는 0 ~ 3까지의 값을 가질 수 있다.
      switch (s.a)
      {
      case 0:
           printf("0\n");
+          output = 0;
           break;
      case 1U:
           printf("1\n");
+          output = 1U;
           break;
      case 2U:
           printf("2\n");
+          output = 2U;
           break;
      case 3U:
           printf("3\n");
+          output = 3U;
           break;
      // 규칙 위배: 도달할 수 없는 코드
      case 4U:
           printf("4\n");
+          output = 4U;
           break;
      // 규칙 위배: 도달할 수 없는 코드지만, 방어 코드로 예외 가능
      default:
           printf("default\n");
+          error_handler();
           break;
      }
+}
+
+void boo() {
+	uint8_t false_count = 0;
+	
+	if(false_count <= 255U) {
+		// ...
+	}
+     // 규칙 위배: 도달할 수 없는 코드, 상단 조건문에 의하여 하단 조건문은 참이 될 수 없음
+	else if(false_count == 255) { 
+		// ...
+	}
 }
 ```
