--- a/_posts/2022-08-02-MISRAC_01_01.md
+++ b/_posts/2022-08-02-MISRAC_01_01.md
@@ -8,8 +8,9 @@ last_modified_at: 2022-08-02
 layout: post
 ---
 - MISRA C 2012_01_01 규칙을 소개한다.
-- MISRA C 2012 규칙을 분석 후 해석하여, 원본 내용과 의미가 다를 수 있습니다. 해당 부분 피드백 주시면 반영하겠습니다. <br>
-
+- MISRA C 2012 규칙을 분석 후 해석하여, 원본 내용과 의미가 다를 수 있습니다. 해당 부분 피드백 주시면 반영하겠습니다. 
+<br>
+<br>
 
 
 <h5>
