--- a/_posts/2022-08-27-MISRAC_02_01.md
+++ b/_posts/2022-08-27-MISRAC_02_01.md
@@ -79,3 +79,83 @@ layout: post
     <br>
     &nbsp;
 </p>
+<h5>
+    [예제 코드]
+</h5>
+```c
+#include <stdio.h>
+#include <stdint.h>
+
+struct S
+{
+    uint32_t a : 2;
+};
+
+void foo();
+
+void foo(struct S s)
+{
+    // 구조체 S의 비트 필드 a는 0 ~ 3까지의 값을 가질 수 있다.
+    switch (s.a)
+    {
+    case 0:
+        printf("0\n");
+        break;
+    case 1U:
+        printf("1\n");
+        break;
+    case 2U:
+        printf("2\n");
+        break;
+    case 3U:
+        printf("3\n");
+        break;
+    // 위배: 도달할 수 없는 코드
+    case 4U:
+        printf("4\n");
+        break;
+    // 예외: 도달할 수 없는 코드지만, 방어 코드로 예외 가능
+    default:
+        printf("default\n");
+        break;
+    }
+}
+```
+->
+```c
+#include <stdio.h>
+#include <stdint.h>
+
+struct S
+{
+    uint32_t a : 2;
+};
+
+void foo();
+
+void foo(struct S s)
+{
+    // 구조체 S의 비트 필드 a는 0 ~ 3까지의 값을 가질 수 있다.
+    switch (s.a)
+    {
+    case 0:
+        printf("0\n");
+        break;
+    case 1U:
+        printf("1\n");
+        break;
+    case 2U:
+        printf("2\n");
+        break;
+    case 3U:
+        printf("3\n");
+        break;
+    // 수정: 도달할 수 없는 코드 제거
+
+    // 위배: 도달할 수 없는 코드지만, 방어 코드로 예외 가능
+    default:
+        printf("default\n");
+        break;
+    }
+}
+```
