--- a/_posts/2022-08-27-MISRAC_02_02.md
+++ b/_posts/2022-08-27-MISRAC_02_02.md
@@ -64,3 +64,85 @@ layout: post
 <p>
     * 불필요한 코드(dead code): 프로그램 소스 코드의 일부지만, 프로그램 동작에 영향을 미치지 않는 코드
 </p>
+<h5>
+    [예제 코드]
+</h5>
+```c
+#include
+#include
+
+void foo();
+
+void foo(void)
+{
+    uint16_t a;
+    int8_t *pc;
+
+    // 위배: a는 초기화 이후 사용되지 않음
+    a = 3U;
+    // 위배: a는 형변환 후 값이 저장되지 않음
+    (int32_t) a;
+    // 위배: a는 >> 연산자 사용 후 값이 저장되지 않음
+    a >> 3;
+    // 위배: ++ 연산자가 * 연산자보다 우선순위가 높으므로 * 연산자는 사용되지 않음
+    *pc++;
+}
+```
+
+->
+
+```c
+#include
+#include
+
+void foo();
+
+void foo(void)
+{
+    uint16_t a;
+    int32_t b;
+    int8_t c = 'c';
+    int8_t *pc = &c;
+
+    // 수정: a는 초기화 이후 사용
+    a = 3U;
+    // 예외
+    (void)a;
+    // 수정: a는 형변환 후 값 저장
+    b = (int32_t)a;
+    // 수정: a는 >> 연산자 사용 후 값 저장
+    a = a >> 3;
+    // 수정: 괄호를 사용하여 우선순위 명시(* 연산자는 사용 후 ++ 연산자 사용)
+    (*pc)++;
+}
+```
+
+```c
+void foo(void);
+void boo(void);
+
+void foo(void)
+{
+}
+
+void boo(void)
+{
+    // 위배: foo 함수는 프로그램 수행에 영향을 미치지 않음
+    foo();
+
+    // ...
+}
+```
+
+->
+
+```c
+void boo(void);
+
+void boo(void)
+{
+    // 수정: 프로그램 수행에 영향을 미치지 않는 foo 함수 제거
+
+    // ...
+}
+```
