--- a/_posts/2020-05-29-SW Test1.md
+++ b/_posts/2020-05-29-SW Test1.md
@@ -2,13 +2,12 @@
 title: "표준에서 정의되지 않은 행동"
 excerpt: "표준에서 정의되지 않은 행동인 implementation-defined behavior, unspecified behavior, undefined behavior를 소개한다"
 categories:
-  - MISRA C
   - SW Test
 last_modified_at: 2020-05-29
 layout: post
 ---
 - 본 글에서는 표준에서 정의되지 않은 행동인 implementation-defined behavior, unspecified behavior, undefined behavior를 소개한다. 
-- 해당 용어들은 MISRA C 2012 가이드라인에서 자주 언급된다.
+- 해당 용어들은 코딩 규칙에서 자주 언급된다.
 
 
 
