--- a/_posts/2020-06-02-SW Test2.md
+++ b/_posts/2020-06-02-SW Test2.md
@@ -2,13 +2,12 @@
 title: "선언(declartion)과 정의(definition)의 차이"
 excerpt: "선언과 정의의 차이를 소개한다."
 categories:
-  - MISRA C
   - SW Test
 last_modified_at: 2020-06-02
 layout: post
 ---
 - 본 글에서는 선언과 정의의 차이를 소개한다. 
-- 해당 용어들은 MISRA C 2012 가이드라인에서 자주 언급된다.
+- 해당 용어들은 코딩 규칙에서 가이드라인에서 자주 언급된다.
 
 
 
