--- a/_posts/2022-11-14-MISRA C3.md
+++ b/_posts/2022-11-14-MISRA C3.md
@@ -59,3 +59,26 @@ int32_t main(void) {
 	return 0;
 }
 ```
+
+
+
+```c
+#include "main.h"
+
+int32_t* g_pa;
+
+static int32_t getGpa(int32_t *pa) { // 매개변수 pa 자료형은 int32_t *, const 키워드가 모두 제거
+  *pa += 100; // pa 값을 변경
+  pa = &g_pa; // pa 포인터를 변경
+
+  return g_pa;
+}
+
+int main(void) {
+  int32_t a = 100;
+  const int32_t const *pa = &a; // 포인터 pa는 값과 주소를 변경할 수 없음
+  int32_t value = getGpa(pa);
+
+  return 0 ;
+}
+```
